--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
                       </p>
                     <label>Your Name</label>
-                    <input type="text" placeholder="Gift Banda" />
+                    <input type="text" name='name' placeholder="Gift Banda" />
                     <label>Email</label>
-                    <input type="email" placeholder="gb@gmail.com" />
+                    <input type="email" name='email' placeholder="gb@gmail.com" />
 
                     <button class="btn-grad" type="submit" >Early Access</button>
                     <a href="https://afrogig-ed56c.web.app/" target="_blank" rel="noreferrer" >Preview</a>
